# Bridge_Supa_QGiS

./: .gitignore  20251217100515_qgis_updates.sql  README.md  TODO.md  layers.json  pyproject.toml  requirements.txt  server.py
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
plugin/QGIS_Supabase_Sync/: __init__.py  main.py  metadata.txt
routes/: QGIS.py  login.py
routes/utils/: supabase_manager.py
